--- a/assets/stylesheets/base.styl
+++ b/assets/stylesheets/base.styl
@@ -37,7 +37,7 @@ ul.countdown li span
 
 @media (max-width 767px)
   ul.countdown li span
-    font-size 50px
+    font-size 40px
     line-height 50px
 
 
@@ -48,8 +48,11 @@ ul.countdown li.seperator
 
 @media (max-width 767px)
   ul.countdown li.seperator
-    font-size 50px
+    font-size 40px
     line-height 50px
+
+  .seconds_text, .days_text, .hours_text, .minutes_text
+    font-size 20px !important
 
 ul.countdown li p
   font-size 25px
